--- a/three/report/phc_analysis.tex
+++ b/three/report/phc_analysis.tex
@@ -1,7 +1,7 @@
 This section discusses the results of policy hill-climbing.
 
 \subsubsection{1 predator vs. 1 prey}
-With policy hill-climbing it is possible to pass a step size, which is a value between 0 and 1. The step size determines how radically the Q-values are updated. A low step size leads to slow changes in Q-values, whereas a high step size changes the Q-values quite radically. The effects of this step size are researched in the 1 predator versus 1 prey scenario. This is displayed in figure \ref{phc_1v1_steps}.
+Policy hill-climbing has a new parameter, step size, which is a value between 0 and 1. The step size determines how much $\pi(s,a^*)$ where $a^* = \underset{a'}{\text{argmax}} Q(s,a')$ is increased, and how much the actions $b \not= a^*$ are decreased. A low step size leads to slow changes to $\pi$, whereas a high step size changes $\pi$ quite radically. The effects of this step size are researched in the 1 predator versus 1 prey scenario. This is displayed in figure \ref{graph:phc_1v1_steps}.
 
 \begin{center}
 	\includegraphics[scale=0.3]{allplots_hillclimbing}
@@ -9,7 +9,7 @@ With policy hill-climbing it is possible to pass a step size, which is a value b
 	\label{graph:phc_1v1_steps}
 \end{center}
 
-The graph shows that all chosen step sizes start off quite radically. Eventually, all algorithms converge. The stepsize of 0.9 takes longest to stabilize and the most amounts of rounds to catch the prey after stabilizing. As stated before, this is a quite radical update of the Q-values. In this case, this result is not optimal. The lowest step size shows that the Q-values are hanged gradually, but still quickly. Contrary to the larger step-sizes, this is quite stable for the lowest step size. All step sizes tend to have peaks in rounds needed to catch the prey, after stabilizing. The peaks at the lowest step size are smallest. Also, number of rounds needed to catch the prey are lowest. Therefore, it seems that small step sizes are best.
+The graph shows that all chosen step sizes start off quite radically. Eventually, all algorithms converge. The step size of 0.9 takes longest to stabilize and the highest number of rounds to catch the prey after stabilizing. As stated before, this high step size ensures a quite radical update of $\pi$. In this case, this parameter setting is not optimal. The lowest step size shows that $\pi$ changes gradually, but still quickly. Contrary to the larger step-sizes, this is quite stable for the lowest step size. All step sizes tend to have peaks in rounds needed to catch the prey, after stabilizing. The peaks at the lowest step size are smallest. Also, the number of rounds needed to catch the prey are lowest. Therefore, it seems that small step sizes are best.
 
 \subsubsection{2 predators vs. 1 prey}
 This section discusses what happens when two predators take on a prey.
@@ -20,7 +20,7 @@ This section discusses what happens when two predators take on a prey.
 	\label{graph:phc_2v1}
 \end{center}
 
-The graph shows that the predators win most episodes. As the number of losses by the predators decrease, it can be concluded that the predators are learning to cooperate and will continue to win most episodes. However, exploratory actions will lead to losses by the predators from time to time.
+Graph \ref{graph:phc_2v1} shows that the predators win most episodes. As the number of losses by the predators decrease, it can be concluded that the predators are learning to cooperate and will continue to win most episodes. However, exploratory actions will lead to losses by the predators from time to time.
 
 \begin{table}[H]
 \begin{center}
