updated the results for minimaxQ

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -161,6 +161,7 @@ When testing the implementation or parameters, only the parameter under test cha
 \input{ind_sarsa_analysis}
 
 \subsection{Minimax Q-learning}
+\input{minimax_analysis}
 
 \subsection{Policy Hill-Climbing}
 \input{phc_analysis}
