--- a/three/report/ind_sarsa_analysis.tex
+++ b/three/report/ind_sarsa_analysis.tex
@@ -10,7 +10,7 @@ Again, it is interesting to see if independent SARSA works well with the new env
 
 As seen with independent Q-learning, the predator learns how to catch the prey quicker than before. This confirms the theory that the smaller state space leads to quicker convergence of the algorithms. 
 
-Compared to independent Q-learning, SARSA takes much longer to catch the prey in the beginning. Also, after learning the amount of rounds it takes the predators to catch the prey still vary much. However, where there is a spike rounds in Q-learning, there is not in SARSA. \red{WHERE THERE IS WHAT?} This happens due to the fact that SARSA is more careful than Q-learning. As SARSA is an on-policy learning algorithm, it is more careful than Q-learning. This leads to less extreme exploratory actions, choosing the "safe path" more often than Q-learning.
+Compared to independent Q-learning, SARSA takes much longer to catch the prey in the beginning. Also, after learning the amount of rounds it takes the predators to catch the prey still vary much. However, Q-learning tends to peak in number of rounds to catch the predator after convergence. This does not happen with SARSA, due to the fact that SARSA is more careful than Q-learning. As SARSA is an on-policy learning algorithm, it is more careful than Q-learning. This leads to less extreme exploratory actions, choosing the "safe path" more often than Q-learning.
 
 \subsubsection{2 predators vs. 1 prey}
 \begin{center}
