--- a/three/report/phc_analysis.tex
+++ b/three/report/phc_analysis.tex
@@ -37,3 +37,6 @@ Graph \ref{graph:phc_2v1} shows that the predators win most episodes. As the num
 \end{table}
 
 Table \ref{table:2vs1} shows that the number of wins are indeed still increasing.
+
+\subsubsection{3 predators vs. 1 prey}
+Due to time constraints, these tests were not performed.
