--- a/three/report/sarsa.tex
+++ b/three/report/sarsa.tex
@@ -24,6 +24,6 @@ Repeat (for each episode):\\
 \tab until s is terminal\\
 \end{algorithm}
 \end{mdframed}
-\captionof{figure}{The algorithm for Sarsa \cite{bartosutton}}
+\captionof{figure}{The algorithm for SARSA \cite{bartosutton}}
 \label{alg:slearning}
 \end{center}
