finished phc analysis

--- a/three/report/phc_analysis.tex
+++ b/three/report/phc_analysis.tex
@@ -64,3 +64,5 @@ The graph shows that the predators win more often than they lose. This shows tha
 \end{table}
 
 The results in table \ref{table:phc_3vs1} shows that the predators are more and more successful in catching the prey. 
+
+As this grid is smaller than the 11x11 grid, it is possible that this algorithm performs differently on the 11x11 grid. Therefore, these results are not completely reliable for analysis.
