--- a/three/report/minimax_analysis.tex
+++ b/three/report/minimax_analysis.tex
@@ -1,5 +1,5 @@
 This section discusses the results for minimax Q-learning. The Minimax-Q algorithm makes use of linear programming, which slows down the time in which runs are made. Due to time constraints, this part of the assignment was therefore only executed on a 5 by 5 grid. 
-The behaviour of this algorithm has lead to running 100 episodes over 20 experiments in order to generate results. Also, the default values were changed in order to get minimax-Q to work. These default values are a learning rate of 0.5, a discount factor of 0.2 and an epsilon value of 0.1.
+The behaviour of this algorithm has lead to running 100 episodes over 20 experiments in order to generate results. Also, the default values were changed in order to get minimax-Q to work. These default values are a learning rate of 0.5 and a discount factor of 0.2.
 
 \subsection{1 predator vs. 1 prey}
 This section evaluates the results of varying parameters during the 1 predator vs. 1 prey scenario.
