--- a/three/report/minimax_analysis.tex
+++ b/three/report/minimax_analysis.tex
@@ -21,7 +21,7 @@ This section evaluates the results of varying parameters during the 1 predator v
 	\label{graph:1vs1_disc_07}
 \end{center}
 
-Though the results seem very noisy, it is clear that a low discount factor yields best results. Again, this is essential to ensure that the predators do not collide. As you can see in Figure \ref{graph:1vs1_disc_02_50exp} where more experiments are run ,the graph shows a smoother line and you can see the agent learns to catch the prey. The number of steps to catch the prey converges to somewhere between 4 and 8.  
+Though the results seem very noisy, it is clear that a low discount factor yields best results. The agent discounts the future heavily and is focused on catching the prey more quickly. As you can see in Figure \ref{graph:1vs1_disc_02_50exp} where more experiments are run ,the graph shows a smoother line and you can see the agent learns to catch the prey. The number of steps to catch the prey converges to somewhere between 4 and 8.  
 
 \begin{center}
 	\includegraphics[scale=0.3]{minimax_gridsize5_100round_50exp_disc02_learningrate_05}
