--- a/three/report/ind_q_analysis.tex
+++ b/three/report/ind_q_analysis.tex
@@ -87,7 +87,7 @@ Though it is implemented for four predators and one prey to be placed on the gri
 \subsubsection{Parameter settings}
 It is interesting to see what happens when the parameters of the learning methods change. As the effects of parameter settings have been researched in a 1 vs. 1 scenario, it is interesting to see what is different when there are more agents on the grid. Also, as all agents now learn, the effects of these learning methods should change.
 
-\subsubsection{Learning rate}
+\subsubsection{Learning rate}\label{learning_rate_ch}
 First, the effect of the learning rate is researched. As the learning rate determines to what extent the newly acquired information will override the old information, it is interesting to see what happens.
 
 \begin{center}
